src/App.scss
$screen-md: 768px;
$screen-lg: 1248px;
$black: #000;
$white: #fff;
$background: hsl(221, 40%, 32%);
$primary: hsl(316, 100%, 72%);
$secondary: hsl(65, 100%, 50%);
$neutral: hsla(223, 35%, 9%, 0.79);
$hover-gradient: linear-gradient(98deg, $secondary 18.56%, $primary 76.02%);

@mixin md {
  @media (min-width: $screen-md) {
    @content;
  }
}

@mixin lg {
  @media (min-width: $screen-lg) {
    @content;
  }
}

.container {
  max-width: $screen-lg;
  margin: 0 auto;
  padding: 0 20px;

  @include md {
    padding: 0 30px;
  }

  @include lg {
    padding: 0 80px;
  }
}

.section {
  margin-bottom: 50px;

  @include md {
    margin-bottom: 55px;
  }

  @include lg {
    margin-bottom: 60px;
  }

  &__title {
    font-size: 1.125rem;
    font-weight: 800;

    @include md {
      font-size: 1.5rem;
    }

    @include lg {
      font-size: 2rem;
    }
  }
}

.header {
  height: 48px;
  background-color: $black;

  @include md {
    height: 80px;
  }

  &__container {
    display: flex;
    height: 100%;
    align-items: center;
  }

  &__logo {
    margin-right: auto;
    width: 71px;

    @include lg {
      width: 104px;
    }
  }

  &__burger-checkbox {
    all: unset;
    background-image: url("./images/burger-menu.svg"), url("./images/x.svg");
    background-size: auto, 0;
    width: 33px;
    height: 38px;

    &:checked {
      background-size: 0, auto;
    }

    &:checked + .menu {
      display: flex;
    }

    @include md {
      display: none;
    }
  }
}

.menu {
  display: none;
  flex-direction: column;
  position: absolute;
  top: 48px;
  left: 0;
  right: 0;
  background-color: $black;

  @include md {
    display: flex;
    position: static;
    flex-direction: row;
    gap: 30px;
  }

  &__link {
    padding: 16px 20px;
    font-size: 1.125rem;
    text-align: right;
    color: $white;
    text-decoration: none;

    @include md {
      padding: 16px;
    }

    &:hover {
      background-clip: text;
      color: transparent;
      background-image: $hover-gradient;

      path {
        fill: url(#hover-gradient);
        fill-opacity: 0.6;
      }
    }
  }
}

.footer {
  height: 127px;
  background-color: $black;

  &__image {
    display: block;
    margin: auto;
    height: 80px;
  }

  &__text {
    text-align: center;
    font-size: 1.125rem;
    line-height: 1.75rem;
  }
}

.hero {
  background-image: linear-gradient(to bottom, rgba($black, 0), $neutral),
    url("./images/nebulae-1.webp");
  background-size: auto, cover;
  background-position: center, center;

  @include md {
    background-image: linear-gradient(to left, rgba($black, 0), $neutral),
    url("./images/nebulae-1.webp");
  }

  &__container {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    text-align: center;
    gap: 17px;
    height: 451px;
    padding-bottom: 44px;

    background-image: url("./images/earth.webp");
    background-repeat: no-repeat;
    background-origin: padding-box;
    background-size: 330px;
    background-position: center top -108px;

    @include md {
      height: 420px;
      align-items: flex-start;
      text-align: initial;
      padding-top: 100px;
      padding-bottom: 100px;
      gap: 22px;

      background-position:  right -105px top 26px;
    }

    @include lg {
      height: 490px;
      align-items: flex-start;
      text-align: initial;
      padding-top: 90px;
      padding-bottom: 120px;
      gap: 22px;

      background-position:  right 60px top 60px;
    }
  }

  &__title {
    font-size: 2.25rem;
    line-height: 100%;

    @include md {
      font-size: 3rem;
      max-width: 60%;
    }

    @include lg {
      font-size: 4.5rem;
    }
  }

  &__subtitle {
    font-size: 1rem;
    font-weight: 800;
    line-height: 120%;

    @include md {
      font-size: 1.375rem;
    }

    @include lg {
      font-size: 2rem;
    }
  }

  &__link {
    padding: 7px 40px;
    color: $black;
    background-color: $secondary;
    border-radius: 100px;
    font-size: 1rem;
    text-decoration: none;

    &:hover {
      background-color: rgba($secondary, 0.6);
    }

    @include md {
      padding: 14px 40px;
      font-size: 1.375rem;
    }
  }
}

.offers {
  display: grid;
  gap: 30px;

  @include md {
    grid-template-columns: 1fr 1fr;
  }

  @include lg {
    gap: 40px;
  }

  &__title {
    grid-column: 1 / -1;
  }
}

.info {
  &__text {
    font-size: 0.875rem;
    padding-top: 20px;
    padding-bottom: 20px;
    opacity: 0.6;

    @include md {
      padding-top: 13px;
      padding-bottom: 20px;
      font-size: 1rem;
    }

    @include lg {
      padding-top: 17px;
      padding-bottom: 17px;
      font-size: 1.25rem;
    }

    &_hidden {
      opacity: 0;
      max-height: 0;
      font-size: 0;
      transition: 0.25s ease;
      padding: 0;
    }
  }

  &__input {
    all: unset;

    &:checked ~ .info__text_hidden {
      font-size: 0.875rem;
      padding-bottom: 20px;
      opacity: 0.6;
      max-height: 999rem;

      @include md {
        padding-bottom: 20px;
        font-size: 1rem;
      }

      @include lg {
        padding-bottom: 17px;
        font-size: 1.25rem;
      }
    }

    & ~ .info__input-label::before {
      content: "Show more";
    }

    &:checked ~ .info__input-label::before {
      content: "Show less";
    }
  }

  &__input-label {
    font-size: 0.875rem;

    @include md {
      font-size: 1rem;
    }

    @include lg {
      font-size: 1.25rem;
    }

    cursor: pointer;

    &:hover {
      opacity: 0.6;
    }
  }
}

.card {
  aspect-ratio: 320 / 350;
  padding: 26px 32px;
  display: flex;
  flex-flow: column;
  justify-content: flex-end;
  align-items: flex-start;
  gap: 22px;

  background-size: auto, cover;
  background-position: center, center;

  border-radius: 10px;

  @include md {
    aspect-ratio: 338 / 350;
  }

  @include lg {
    height: 350px;
    aspect-ratio: initial;
  }

  &_large {
    @include lg {
      grid-column: 1 / -1;
    }
  }

  &__title {
    font-size: 2.5rem;
    line-height: 100%;
    max-width: 280px;

    @include lg {
      font-size: 2.875rem;
    }

    &_large {
      @include lg {
        max-width: 60%;
        font-size: 4.625rem;
      }
    }
  }

  &__description {
    font-size: 1rem;
    line-height: 120%;

    @include lg {
      font-size: 1.5rem;
    }

    &_large {
      @include lg {
        font-size: 1.625rem;
      }
    }
  }

  &__link {
    padding: 7px 40px;
    color: $secondary;
    border: 2px solid $secondary;
    border-radius: 100px;
    font-size: 1rem;
    text-decoration: none;

    &:hover {
      opacity: 0.6;
    }

    @include lg {
      padding: 14px 40px;
      font-size: 1.375rem;
    }
  }
}

.text {
  font-weight: 700;

  &_primary {
    color: $primary;
  }

  &_secondary {
    color: $secondary;
  }

  &_bolder {
    font-weight: 800;
  }
}

